go言語に変更

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,19 @@
 .idea/workspace.xml
 
 .idea/xiidec2.iml
+
+.idea/compiler.xml
+
+.idea/copyright/profiles_settings.xml
+
+.idea/goLibraries.xml
+
+.idea/libraries/GOPATH__xiidec2_.xml
+
+.idea/goLibraries.xml
+
+.idea/goLibraries.xml
+
+.idea/goLibraries.xml
+
+.idea/goLibraries.xml
