--- a/app.yaml
+++ b/app.yaml
@@ -1,13 +1,8 @@
 application: xiidec2
 version: 1
-runtime: python27
-api_version: 1
-threadsafe: true
+runtime: go
+api_version: go1
 
 handlers:
-- url: .*
-  script: myproject.wsgi.application
-
-libraries:
-- name: django
-  version: 1.5
+- url: /.*
+  script: _go_app
